refactor of sql plugin code